# meta-codegen

./: .gitignore  CMakeLists.txt  README.md  aot_transpiler.py  build.bat  command.txt  metacodegen.py  run.bat  tile.pass
examples/cmake-example/: CMakeLists.txt  build.sh  run.sh
examples/cmake-example/src/client/: item.h  main.cpp  tile.h
examples/cmake-example/src/server/: item.h  main.cpp  tile.h
examples/cmake-example/src/shared/: items.h  tiles.h
src/client/: item.h  main.cpp  tile.h
src/server/: main.cpp  tile.h
src/shared/: air.h  items.h  tiles.h
src/tiles/: dirt.h
